TEN-303 Make gc async
