# cmd/console/api/cleanup.go
@@ -2,12 +2,14 @@ package api
 
 import (
 	"context"
+	"errors"
 	"fmt"
 	"net/http"
 	"time"
 
 	. "gitlab.com/piccolo_su/vegeta/pkg/apperror"
 	"gitlab.com/piccolo_su/vegeta/pkg/util"
+	"go.mongodb.org/mongo-driver/bson/primitive"
 
 	"github.com/go-chi/chi"
 	"gitlab.com/piccolo_su/vegeta/pkg/response"
@@ -16,7 +18,38 @@ import (
 func (api *api) cleanup() func(chi.Router) {
 	return func(r chi.Router) {
 		r.Post("/gc", api.runGarbageCollection())
+		r.Get("/gc/{gcID}", api.getGarbageCollectionTask())
 		r.Get("/hotStorage", api.getHotStorageView())
+	}
+}
+
+// @Summary Get garbage collection task
+// @Description Get garbage collection task
+// @ID v1-cleanup-gctask-get
+// @Produce json
+// @Param gcID path string true "gcID"
+// @Router /api/v1/cleanup/gc/{gcID} [get]
+func (api *api) getGarbageCollectionTask() http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		ctx, cancel := context.WithTimeout(r.Context(), time.Second*10)
+		defer cancel()
+
+		gcTaskID, err := getGCTaskIDFromURL(r)
+		if err != nil {
+			RespAndLog(w, ctx,
+				NewFieldError(http.StatusBadRequest,
+					fmt.Errorf("Couldn't read GC Task ID: %w", err),
+					Suberror{"gcID", ""}))
+			return
+		}
+
+		gcTask, err := api.cleanupService.GetGCTask(ctx, gcTaskID)
+		if err != nil {
+			RespAndLog(w, ctx, fmt.Errorf("Couldn't get GC Task: %w", err))
+			return
+		}
+
+		response.Ok(w, response.WithItem(*gcTask))
 	}
 }
 
@@ -50,13 +83,15 @@ func (api *api) runGarbageCollection() http.HandlerFunc {
 		}
 
 		fromTimestamp := time.Now().AddDate(0, 0, -1*param.DaysOffset)
-		err = api.cleanupService.RunGarbageCollection(ctx, fromTimestamp)
+		gcTask, err := api.cleanupService.CreateGCTask(ctx)
 		if err != nil {
-			RespAndLog(w, ctx, fmt.Errorf("Garbage collection returned an error: %w", err))
+			RespAndLog(w, ctx, fmt.Errorf("Cannot start GC: %w", err))
 			return
 		}
+		gcCtx, _ := context.WithTimeout(api.ctx, time.Minute*1)
+		go api.cleanupService.ScheduleGarbageCollection(gcCtx, fromTimestamp, gcTask)
 
-		response.Ok(w)
+		response.Ok(w, response.WithItem(*gcTask))
 	}
 }
 
@@ -78,4 +113,12 @@ func (api *api) getHotStorageView() http.HandlerFunc {
 
 		response.Ok(w, response.WithItem(*hotStorageView))
 	}
+}
+
+func getGCTaskIDFromURL(r *http.Request) (primitive.ObjectID, error) {
+	gcID := chi.URLParam(r, "gcID")
+	if gcID == "" {
+		return primitive.NilObjectID, errors.New("gcID is not provided")
+	}
+	return primitive.ObjectIDFromHex(gcID)
 }
